...
import { envToString } from './utils';
import { useEffect, useState } from 'react';
import Toast from 'react-native-toast-message';

const TEST_BUTTONS: Array<[string, string]> = [
  ['uber_rider:profile', 'uber_rider:profile'],
  ['test:open_browser_must_succeed', 'test:open_browser_must_succeed'],
  ['404 flow', '404'],
];

export default function App() {
  const [inputFlow, setInputFlow] = useState('');
  const [inputParams, setInputParams] = useState('');
...
        text1: `${error.code} - ${error.message}`,
      });
    } else {
      console.log('got res: ', response);
      Toast.show({
        type: 'success',
        text1: 'Success',
      });
    }
  };

  const submitCustomFlow = async () => {
    if (!inputFlow) {
...
