...
      apiKey: process.env.OPACITY_API_KEY!,
      environment: opacityEnvironment,
      shouldShowErrorsInWebView: false,
    });
    Toast.show({
      type: 'success',
      text1: 'SDK Initialized!',
    });
  } catch (e) {
    Toast.show({
      type: 'error',
      text1: 'Error initializing SDK',
      text2: `${e}`,
...
